--- a/views/register.html
+++ b/views/register.html
@@ -3,6 +3,7 @@
 <form method='post'>
 	<input name='name' placeholder='Name'><br>
 	<input name='email' placeholder='Email'><br>
-	<input name='password' placeholder='Password'><br>
+	<input name='password' placeholder='Password'
+		type='password'><br>
 	<button type='submit'>Register</button>
 </form>
