Add Bootstrap 4 (Alpha 4)

--- a/views/register.html
+++ b/views/register.html
@@ -1,9 +1,11 @@
 
+<link rel="stylesheet" href="/bootstrap.css">
 
 <form method='post'>
 	<input name='name' placeholder='Name'><br>
 	<input name='email' placeholder='Email'><br>
 	<input name='password' placeholder='Password'
 		type='password'><br>
-	<button type='submit'>Register</button>
+	<button class='btn btn-primary' 
+		type='submit'>Register</button>
 </form>
