--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,8 @@
 <% include header.html %>
 
-<i>Welcome to our company</i>
+<div class="container">
+	<h1>Welcome to our company</h1>
+
+</div>
 
 <% include footer.html %>
