--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,18 @@
 <% include header.html %>
 
-
+<div class="container">
+	<form method="post">
+		<input name="email" 
+			class="form-control"
+			placeholder="Email"
+			autofocus >
+		<input name="password"
+			type="password"
+			class="form-control"
+			placeholder="Password" >
+		<button type="submit"
+			class="btn btn-primary">Log In</button>
+	</form>
+</div>
 
 <% include footer.html %>
