--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,10 @@
 <% include header.html %>
+<style>
+	input { margin-bottom: 10px; }
+</style>
 
 <div class="container">
+	<h1>Login</h1>
 	<form method="post">
 		<input name="email" 
 			class="form-control"
