--- a/views/profile.html
+++ b/views/profile.html
@@ -1,1 +1,13 @@
-<h1>This is the profile page</h1>
+<% include header.html %>
+<div class="container">
+	<h1>Profile</h1>
+	<div class="btn-group">
+		<a class="btn btn-primary" href='/home'>Home</a>
+		<a class="btn btn-primary" href='/profile'>Profile</a>
+		<a class="btn btn-primary" href='/edit'>Edit</a>
+		<a class="btn btn-primary" href='/logout'>Log Out</a>
+	</div>
+
+</div>
+
+<% include footer.html %>
