--- a/views/list.html
+++ b/views/list.html
@@ -1,2 +1,20 @@
+<% include header.html %>
+<style>
+	.block {
+		border: 2px solid orange;
+		margin-top: 10px;
+		padding: 10px;
+		border-radius: 5px;
+	}
+</style>
 
-<%= post[1].time %>
+<div class="container">
+	<% for (var i = 0; i < post.length; i++) { %>
+		<div class='block'>
+			<h3><%= post[i].topic %></h3>
+			<p><%= post[i].detail %></p>
+		</div>
+	<% } %>
+</div>
+
+<% include footer.html %>
