Add file upload handler

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,8 @@
 		<a class="btn btn-primary" href="/login">Log In</a>
 		<a class="btn btn-primary" href="/register">Register</a>
 	</div>
+
+	<img src='/fcdac8415258be7d91a5fbfa08b479bc' >
 </div>
 
 <% include footer.html %>
