--- a/views/chat.html
+++ b/views/chat.html
@@ -25,13 +25,14 @@
 		class="btn btn-primary"
 	>Send</button>
 </div>
-
+<script src="/jquery.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script>
 var socket = io.connect("/");
 
 function send() {
-	
+	socket.send( $('#message').val() );
+	$('#message').val("");
 }
 </script>
 
