Add chat history

--- a/views/chat.html
+++ b/views/chat.html
@@ -29,6 +29,11 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
 var socket = io.connect("/");
+socket.on("message", showMessage);
+
+function showMessage(m) {
+	$('#chat-history').append(m + "<br>");
+}
 
 function send() {
 	socket.send( $('#message').val() );
