--- a/views/chat.html
+++ b/views/chat.html
@@ -17,13 +17,15 @@
 	<div id="chat-history">
 
 	</div>
-	<input id="message"
-		class="form-control"
-		autofocus
-		placeholder="Message">
-	<button onclick="send()"
-		class="btn btn-primary"
-	>Send</button>
+	<form action="javascript:send()">
+		<input id="message"
+			class="form-control"
+			autofocus
+			placeholder="Message">
+		<button type="submit" class="btn btn-primary">
+			Send
+		</button>
+	</form>
 </div>
 <script src="/jquery.js"></script>
 <script src="/socket.io/socket.io.js"></script>
