--- a/views/profile.html
+++ b/views/profile.html
@@ -4,6 +4,7 @@
 	<div class="btn-group">
 		<a class="btn btn-primary" href='/'>Home</a>
 		<a class="btn btn-primary" href='/profile'>Profile</a>
+		<a class="btn btn-primary" href="/list">List</a>
 		<a class="btn btn-primary" href='/new'>New Topic</a>
 		<a class="btn btn-primary" href='/chat'>Chat</a>
 		<a class="btn btn-primary" href='/logout'>Log Out</a>
