--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
 	<div class="btn-group">
 		<a class="btn btn-primary" href="/login">Log In</a>
 		<a class="btn btn-primary" href="/register">Register</a>
+		<a class="btn btn-primary" href="/list">List</a>
 	</div>
 
 </div>
